--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ body{
 .website_author{
     display: none;
 }
+a:link{
+    color #45B5FF;
+}
+a:visited{
+    color: #45B5FF;
+}
 @media only screen and (max-width: 576px){
     *{
         font-family: Arial, Helvetica, sans-serif;
@@ -102,7 +108,7 @@ body{
         position: relative;
         bottom: 66px;
         text-align: center;
-        font-size: 22px;
+        font-size: 18px;
         height: 44px;
     }
     .username{
