--- a/style.css
+++ b/style.css
@@ -51,8 +51,9 @@ body{
 .website_author{
     display: none;
 }
-.website_author{
+.website_author_pc{
     position: relative;
+    font-size: 34px;
 }
 a:link{
     color: #45B5FF;
