--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     border-radius: 25px;
     position: relative;
     bottom: 134px;
-    left 75px
+    left: 80px
 }
 .text{
     position: relative;
