--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ a:visited{
         height: 270px;
         position: relative;
         bottom: 64px;
+        right: 80px;
         font-size: 38px;
     }
     .text{
