--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ a:visited{
     }
     .text{
         position: relative;
+        top: 44px;
     }
     .nischay_bhaiya{
         display: none;
