--- a/Fan Art.css
+++ b/Fan Art.css
@@ -50,7 +50,7 @@ body{
 .sidebar{
     background: #fcde8d;
     width: 147px;
-    height: 717px;
+    height: 695px;
     position: fixed;
     top: 8px;
     border-radius: 25px;
@@ -383,4 +383,58 @@ a:visited{
 .fanart_container3{
     position: relative;
     bottom: 55px;
+}
+
+@media only screen and (max-width: 576px){
+    html, body{
+        height: 616px;
+        overflow-x: hidden;
+    }
+    .container2{
+        display: none;
+    }
+    .header{
+        display: none;
+    }
+    .sidebar{
+        display: none;
+    }
+    .mobile{
+        display: block;
+        position: relative;
+        bottom: 22px;
+        right: 160px;
+    }
+    .mobile_header{
+        font-size: 33px;
+        background-color: #FFDC7B;
+        border-radius: 25px;
+        width: 382px;
+        position: relative;
+        bottom: 0px;
+    }
+    .mobile_heading{
+        position: relative;
+        left: 33px;
+    }
+    .mobile_info{
+        display: block;
+        border-radius: 25px;
+        font-size: 22px;
+        background-color: #45B5FF;
+        width: 382px;
+        position: relative;
+        bottom: 22px;
+    }
+    .mobile_info_text{
+        position: relative;
+        left: 22px;
+        width: 88%;
+    }
+    .alternate_img{
+        width: 382px;
+        position: relative;
+        bottom: 11px;
+        border-radius: 25px;
+    }
 }
