--- a/Cartoon Arts.css
+++ b/Cartoon Arts.css
@@ -28,7 +28,7 @@ body{
 .sidebar{
     background: #fcde8d;
     width: 147px;
-    height: 717px;
+    height: 695px;
     position: fixed;
     top: 8px;
     border-radius: 25px;
@@ -310,4 +310,61 @@ a:visited{
     bottom: 11px;
     font-size: 22px;
     text-align: center;
+}
+.mobile{
+    display: none;
+}
+
+@media only screen and (max-width: 576px){
+    html, body{
+        height: 616px;
+        overflow: hidden;
+    }
+    .fanart_container3{
+        display: none;
+    }
+    .header{
+        display: none;
+    }
+    .sidebar{
+        display: none;
+    }
+    .mobile{
+        display: block;
+        position: relative;
+        bottom: 44px;
+        right: 155px;
+    }
+    .mobile_header{
+        font-size: 33px;
+        background-color: #FFDC7B;
+        border-radius: 25px;
+        width: 382px;
+        position: relative;
+        bottom: 0px;
+    }
+    .mobile_heading{
+        position: relative;
+        left: 33px;
+    }
+    .mobile_info{
+        display: block;
+        border-radius: 25px;
+        font-size: 22px;
+        background-color: #45B5FF;
+        width: 382px;
+        position: relative;
+        bottom: 22px;
+    }
+    .mobile_info_text{
+        position: relative;
+        left: 22px;
+        width: 88%;
+    }
+    .alternate_img{
+        width: 382px;
+        position: relative;
+        bottom: 11px;
+        border-radius: 25px;
+    }
 }
