--- a/Fan Art.css
+++ b/Fan Art.css
@@ -386,6 +386,9 @@ a:visited{
 }
 
 @media only screen and (max-width: 576px){
+    *{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
     html, body{
         height: 616px;
         overflow-x: hidden;
